<resources>
    <string name="app_name">Let\'s Order!</string>
    <string name="order">Order</string>
    <string name="call">Call</string>
    <string name="bill">Bill</string>
    <string name="total">Total:</string>
    <string name="orders_stats">Orders for %s: %d</string>
    <string name="add">Add</string>
    <string name="add_image">Add Image</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log in</string>
    <string name="add_new_dish">Add new dish</string>
    <string name="close_table">Close table</string>
    <string name="delete_order">Delete order</string>
    <string name="menu">Menu</string>
    <string name="login">Login</string>
    <string name="table_number">Table number</string>
    <string name="restaurant_number">Restaurant number</string>
    <string name="capacity">Capacity</string>
    <string name="add_table">Add table</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="delete">Delete</string>
    <string name="sub">-</string>
    <string name="plus">+</string>
    <string name="table_num">Table %d</string>
    <string name="bill_s">Bill: %s</string>
    <string name="waiters">Waiters</string>
    <string name="tables">Tables</string>
    <string name="register_new_waiter">Register new waiter</string>
</resources>