<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.admin.AdminPanelFragment">

    <data>
        <variable
            name="adminPanelFragment"
            type="com.example.letsorder.views.admin.AdminPanelFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ordersStat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:textSize="24sp"
            android:text="@string/orders_stats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonWaiters"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:text="@string/waiters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ordersStat" />

        <Button
            android:id="@+id/buttonMenu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonWaiters" />

        <Button
            android:id="@+id/buttonTables"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/tables"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonMenu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>